--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "fumadocs-core": "15.3.4",
     "fumadocs-mdx": "11.6.5",
     "fumadocs-ui": "15.3.4",
+    "katex": "^0.16.22",
     "lucide-react": "^0.511.0",
+    "mermaid": "^11.6.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
+    "shiki": "^3.4.2",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
