--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fumadocs-core": "15.3.4",
     "fumadocs-mdx": "11.6.5",
     "fumadocs-ui": "15.3.4",
@@ -18,12 +20,14 @@
     "mermaid": "^11.6.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "octokit": "^5.0.2",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "shiki": "^3.4.2",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
